<resources>
    <string name="app_name">Bank Application</string>
    <string name="all_users">All Users</string>
    <string name="all_transaction">All Transaction</string>
    <string name="add_record">add record</string>
    <string name="enter_amount_to_transfer">Enter amount to transfer</string>
    <string name="mobile">Mobile</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_no">Account no.</string>
    <string name="balance">Balance</string>
    <string name="transfer">Transfer</string>
    <string name="rs">Rs.</string>
    <string name="delete_user">delete user</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="no_transactions_yet">No Transactions Yet</string>
</resources>